fixed resume for landscape on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -74,4 +74,10 @@
     .w-pdfMobile{
         width: 350px;
     }
+    .h-pdfMobileLandscape{
+        height: 550px;
+    }
+    .w-pdfMobileLandscape{
+        width: 500px;
+    }
 }
